Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19838

Fuzzy locator is not fuzzy enough

XMLWordPrintable

    • 5dd4bb62b138c576b7085c029d82873d8cbd2b31 (qt-creator/qt-creator/master)

      Steps:

      1. Open chromium's Qt Creator project .

      2. In the locator type: htvideoele

      Expected:

      HTMLVideoElement.cpp among other files show up.

      Actual:

      html_video_element_capturer_source.* show up (3 files only).

        For Gerrit Dashboard: QTCREATORBUG-19838
        # Subject Branch Project Status CR V

            aha_1980 André Hartmann
            hugoh Hugo Holgersson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes