FuzzyMatcher: Match mixed uppercase words and humps

"htvideoele" did not match "HTMLVideoElement" before.

This can easily be achieved by modifying the uppercase
snake matcher and thus making the underscore between
the letters optional.

Fixes: QTCREATORBUG-19838
Change-Id: I821a68b20d40fb0843c12f43f47133833c75cb9b
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>